[package]
name = "act-zero"
version = "0.3.0"
authors = ["Diggory Blake <diggsey@googlemail.com>"]
edition = "2018"
description = "Ergonomic actor system"
repository = "https://github.com/Diggsey/act-zero"
readme = "../README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default-tokio = ["tokio"]
default-async-std = ["async-std"]
default-disabled = []
nightly = []
tracing = ["tynm"]

[dependencies]
futures = "0.3.6"
async-trait = "0.1.41"
log = "0.4.11"
tokio = { version = "0.2.22", features = ["rt-core", "time"], optional = true }
async-std = { version = "1.6.5", optional = true }
tynm = { version = "0.1.4", optional = true }

[dev-dependencies]
tokio = { version = "0.2.22", features = ["macros", "blocking"] }
async-std = { version = "1.6.5", features = ["attributes"] }

[[example]]
name = "using_tokio"
required-features = ["tokio"]

[[example]]
name = "using_async_std"
required-features = ["async-std"]

[[example]]
name = "using_global_runtime"

[[example]]
name = "using_provided_runtime"

[[example]]
name = "using_timers"
required-features = ["tokio"]
