[package]
name = "act-zero-macro"
version = "0.2.0"
authors = ["Diggory Blake <diggsey@googlemail.com>"]
edition = "2018"
description = "Procedural macros for act-zero"
repository = "https://github.com/Diggsey/act-zero"
readme = "../README.md"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.33", features = ["full", "extra-traits"] }
quote = "1.0.7"
proc-macro2 = "1.0.19"
heck = "0.3.1"
