[package]
name = "act-zero"
version = "0.2.0"
authors = ["Diggory Blake <diggsey@googlemail.com>"]
edition = "2018"
description = "Ergonomic actor system"
repository = "https://github.com/Diggsey/act-zero"
readme = "../README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
act-zero-macro = { version = "0.2.0", path = "../act-zero-macro" }
serde = { version = "1.0.114", features = ["derive"] }

[dev-dependencies]
futures = { version = "0.3.5", features = ["thread-pool"] }
